Clean up obsolete Ivy/Ant confs/targets
This change removes publishing related Ivy files and Ant targets etc.

Further cleanup will be done in later changesets.

Change-Id: Ibe430495e85a1b0f3538072a4823c627ddac2924