@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<project name="vaadin-uitest" basedir="." default="publish-local"
+<project name="vaadin-uitest" basedir="." default="compile"
     xmlns:ivy="antlib:org.apache.ivy.ant">
     <description>
         Provides a uitest WAR containing Vaadin UI tests
@@ -57,104 +57,6 @@
             <classpath refid="classpath.compile.dependencies" />
             <classpath refid="classpath.compile.custom" />
         </javac>
-    </target>
-
-    <target name="testing-widgetset" depends="dependencies,compile">
-        <property name="module"
-            value="com.vaadin.tests.widgetset.TestingWidgetSet" />
-        <property name="style" value="OBF" />
-        <property name="localWorkers" value="6" />
-        <property name="extraParams" value="" />
-        <property name="module.output.dir" location="${result.dir}/VAADIN/widgetsets" />
-        <property name="work.dir" location="${result.dir}/work" />
-
-        <mkdir dir="${module.output.dir}" />
-
-        <echo>Compiling ${module} to ${module.output.dir}</echo>
-
-        <!-- compile the module -->
-        <java classname="com.google.gwt.dev.Compiler" classpathref="classpath.compile.dependencies"
-            failonerror="yes" fork="yes" maxmemory="512m">
-            <classpath location="src" />
-            <classpath location="${classes}" />
-            <arg value="-workDir" />
-            <arg value="${work.dir}" />
-            <arg value="-logLevel" />
-            <arg value="TRACE" />
-            <arg value="-war" />
-            <arg value="${module.output.dir}" />
-            <arg value="-style" />
-            <arg value="${style}" />
-
-            <arg value="-localWorkers" />
-            <arg value="${localWorkers}" />
-            <arg value="-strict" />
-            <arg line="${extraParams}" />
-            <arg value="${module}" />
-
-            <sysproperty key="vFailIfNotSerializable" value="true" />
-
-            <jvmarg value="-Xss8M" />
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Djava.awt.headless=true" />
-        </java>
-
-    </target>
-
-    <target name="war"
-        depends="dependencies, compile, compile-test-themes, testing-widgetset">
-        <property name="result.dir" location="result" />
-        <property name="classes" location="${result.dir}/classes" />
-        <property name="WebContent.dir" location="${vaadin.basedir}/WebContent" />
-        <property name="deps.dir" location="${result.dir}/deps" />
-        <property name="src" location="${result.dir}/../src" />
-
-        <ivy:resolve log="download-only" resolveid="common"
-            conf="build" />
-        <ivy:cachepath pathid="classpath.runtime.dependencies"
-            conf="build" />
-
-        <delete dir="${deps.dir}" />
-        <mkdir dir="${deps.dir}" />
-
-        <copy todir="${deps.dir}" flatten="true">
-            <path refid="classpath.runtime.dependencies" />
-        </copy>
-
-        <delete>
-            <!-- Avoid including some potentially conflicting jars in the 
-                war -->
-            <fileset dir="${deps.dir}" includes="jetty-*.jar" />
-            <fileset dir="${deps.dir}" includes="servlet-api-*.jar" />
-        </delete>
-
-        <war destfile="${result.war}" duplicate="fail" index="true">
-            <!-- <fileset dir="${common.jarfiles.dir}" /> -->
-            <fileset dir="${result.dir}">
-                <include name="VAADIN/widgetsets/**/*" />
-                <include name="VAADIN/themes/tests-valo*/**" />
-            </fileset>
-            <fileset dir="${WebContent.dir}">
-                <include name="statictestfiles/**" />
-                <include name="VAADIN/themes/tests-*/**" />
-                <!-- Scss themes compiled and included above -->
-                <exclude name="VAADIN/themes/tests-valo*/**" />
-                <include name="VAADIN/themes/reindeer-tests/**" />
-                <include name="VAADIN/jquery.atmosphere.js" />
-                <include name="WEB-INF/*.xml" />
-                <include name="WEB-INF/web.xml.2.4" />
-            </fileset>
-            <classes dir="${classes}" />
-            <classes dir="${src}" />
-            <lib dir="${deps.dir}" />
-        </war>
-
-    </target>
-
-    <target name="publish-local" depends="war">
-        <antcall target="common.publish-local">
-            <param name="conf" value="build" />
-        </antcall>
     </target>
 
     <target name="clean">
@@ -245,102 +147,6 @@
                 <include name="*" />
             </fileset>
         </delete>
-    </target>
-
-    <target name="compile-test-themes">
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-dark" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-metro" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-flat" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-flatdark" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-facebook" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-blueprint" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-light" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-disabled-animations" />
-        </antcall>
-        <antcall target="compile-theme">
-            <param name="theme" value="tests-valo-no-font-awesome" />
-        </antcall>
-
-    </target>
-    <target name="compile-theme" depends="copy-theme">
-        <fail unless="theme"
-            message="You must give the theme name to compile in the 'theme' parameter" />
-
-        <ivy:resolve log="download-only" resolveid="common"
-            conf="compile-theme" />
-        <ivy:cachepath pathid="classpath.compile.theme"
-            conf="compile-theme" />
-        <ivy:cachepath pathid="classpath.runtime.theme"
-            conf="build" />
-
-        <echo>Compiling ${theme}</echo>
-        <mkdir dir="${theme.result.dir}" />
-
-        <!-- compile the theme -->
-        <java classname="com.vaadin.buildhelpers.CompileTheme"
-            classpathref="classpath.compile.theme" failonerror="yes"
-            fork="yes" maxmemory="512m">
-            <arg value="--theme" />
-            <arg value="${theme}" />
-            <arg value="--theme-folder" />
-            <arg value="${theme.result.dir}" />
-            <arg value="--version" />
-            <arg value="${vaadin.version}" />
-            <jvmarg value="-Xss8M" />
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Djava.awt.headless=true" />
-        </java>
-
-    </target>
-
-    <target name="copy-theme">
-        <fail unless="theme"
-            message="You must give the theme name to copy n the 'theme' parameter" />
-        <property name="theme.source.dir" location="../themes/src/main/resources/VAADIN/themes" />
-        <property name="webcontent.source.dir" location="../WebContent/VAADIN/themes" />
-
-        <copy todir="${theme.result.dir}">
-            <fileset dir="${theme.source.dir}">
-                <include name="${theme}/**/*.scss" />
-            </fileset>
-            <filterset refid="filter-vaadin.version" />
-        </copy>
-        <copy todir="${theme.result.dir}">
-            <fileset dir="${theme.source.dir}">
-                <exclude name="${theme}/**/*.scss" />
-            </fileset>
-        </copy>
-        <copy todir="${theme.result.dir}">
-            <fileset dir="${webcontent.source.dir}">
-                <include name="${theme}/**/*.scss" />
-            </fileset>
-            <filterset refid="filter-vaadin.version" />
-        </copy>
-        <copy todir="${theme.result.dir}">
-            <fileset dir="${webcontent.source.dir}">
-                <exclude name="${theme}/**/*.scss" />
-            </fileset>
-        </copy>
-
-        
     </target>
 
 
